# duckdb_yaml

./: .gitignore  .gitmodules  BACKGROUND.md  CLAUDE.md  CLAUDE_DOCUMENTATION_GUIDE.md  CLAUDE_LESSONS.md  CMakeLists.txt  DUCKDB_NAMED_PARAMETERS_PATTERN.md  Makefile  README.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.5.0.md  REORGANIZATION_PLAN.md  TODO.md  YAML_FUNCTION_BEST_PRACTICES.md  debug-scalar-test.sql  debug_emitter_test  debug_emitter_test.cpp  debug_node_test  debug_node_test.cpp  extension.json  extension_config.cmake  make.out  mkdocs.yml  run-test-sequence.sh  test-debug-mode.sql  test-sequence  test-single-value.sh  vcpkg.json  verify-fix.sh  yaml_community_extension.yml
.github/workflows/: MainDistributionPipeline.yml  community_extension.yml  main.yml
docs/: NEW_FEATURES.md  contributing.md  index.md  requirements.txt  yaml_column_types.md  yaml_extraction_functions.md
docs/examples/: blog-docs.md  config-files.md  data-migration.md  index.md
docs/functions/: construction.md  conversion.md  extraction.md  (+3 more)
src/: .yaml_reader.cpp.swp  yaml_column_types.cpp  yaml_copy.cpp  yaml_debug.cpp  yaml_extension.cpp  yaml_extraction_functions.cpp  yaml_formatting.cpp  yaml_frontmatter.cpp  yaml_functions.cpp  yaml_reader.cpp  yaml_reader.cpp~  yaml_reader_column_bind.cpp  yaml_reader_column_bind_old.cpp  yaml_reader_files.cpp  yaml_reader_functions.cpp  yaml_reader_parsing.cpp  yaml_reader_types.cpp  yaml_scalar_functions.cpp  yaml_types.cpp  yaml_types_clean.cpp  yaml_unnest_functions.cpp  yaml_utils.cpp
test/: value_to_yaml_test.cpp  yaml.test
(+178 files in other folders)
